--- a/index.html
+++ b/index.html
@@ -4,15 +4,163 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
     <title>Currency Exchange</title>
 </head>
 <body>
-    <h1>Exchange Rate and Currency Converter</h1>
-    <h4 class="base-currency">base Currency</h4>
-    <h4 class="target-currency">target Currency</h4>
+    
+    
+    <div class="container-fluid text-center">
+        <div class="row justify-content-center">
+            <!-- Multiple Conversions -->
+            <div class="col-4 align-self-center">
+                <h1>Exchange Rates</h1>
+                <h4 class="base-currency">base Currency</h4>
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Base Currency
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" onclick="getBaseCur('USD')">USD - United States Dollar</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('CAD')">CAD - Canadian Dollar</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('CHF')">CHF - Swiss Franc</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('CNY')">CNY - Chinese Yuan</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('DKK')">DKK - Danish Krone</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('EUR')">EUR - Euro</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('GBP')">GBP - British Pound Sterling</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('HKD')">HKD - Hong Kong Dollar</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('HRK')">HRK - Croatian Kuna</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('ILS')">ILS - Israeli New Sheqel</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('INR')">INR - Indian Rupee</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('ISK')">ISK - Icelandic Króna</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('JPY')">JPY - Japanese Yen</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('NOK')">NOK - Norwegian Krone</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('NZD')">NZD - New Zealand Dollar</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('PHP')">PHP - Philippine Peso</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('ZAR')">ZAR - South African Rand</a></li>
+                    </ul>
+                  </div>
+                <h1 class="result"></h1>
+            </div>
+            <!-- Single Conversion -->
+            <div class="col-4 align-self-center">
+                <h1>Exchange Rate and Currency Converter</h1>
+                <h4 class="base-currency">base Currency</h4>
+                <div class="dropdown base-currency1">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Base Currency
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" onclick="getBaseCur('USD')">USD - United States Dollar</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('CAD')">CAD - Canadian Dollar</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('CHF')">CHF - Swiss Franc</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('CNY')">CNY - Chinese Yuan</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('DKK')">DKK - Danish Krone</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('EUR')">EUR - Euro</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('GBP')">GBP - British Pound Sterling</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('HKD')">HKD - Hong Kong Dollar</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('HRK')">HRK - Croatian Kuna</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('ILS')">ILS - Israeli New Sheqel</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('INR')">INR - Indian Rupee</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('ISK')">ISK - Icelandic Króna</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('JPY')">JPY - Japanese Yen</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('NOK')">NOK - Norwegian Krone</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('NZD')">NZD - New Zealand Dollar</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('PHP')">PHP - Philippine Peso</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('ZAR')">ZAR - South African Rand</a></li>
+                    </ul>
+                  </div>
+                <h4 class="target-currency">target Currency</h4>
+                <div class="dropdown target-currency1">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Base Currency
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" onclick="getTargetCur('USD')">USD - United States Dollar</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('CAD')">CAD - Canadian Dollar</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('CHF')">CHF - Swiss Franc</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('CNY')">CNY - Chinese Yuan</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('DKK')">DKK - Danish Krone</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('EUR')">EUR - Euro</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('GBP')">GBP - British Pound Sterling</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('HKD')">HKD - Hong Kong Dollar</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('HRK')">HRK - Croatian Kuna</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('ILS')">ILS - Israeli New Sheqel</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('INR')">INR - Indian Rupee</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('ISK')">ISK - Icelandic Króna</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('JPY')">JPY - Japanese Yen</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('NOK')">NOK - Norwegian Krone</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('NZD')">NZD - New Zealand Dollar</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('PHP')">PHP - Philippine Peso</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('ZAR')">ZAR - South African Rand</a></li>
+                    </ul>
+                  </div>
+                <button class="btn-gcr">GET Conversion Rate</button>
+                <h1 class="result"></h1>
+            </div>
+            <!-- Amount Currency Converter -->
+            <div class="col-4 align-self-center">
+                <h1>Exchange Rate and Currency Converter</h1>
+                <h4 class="base-currency">base Currency</h4>
+                <div class="dropdown base-currency1">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Base Currency
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" onclick="getBaseCur('USD')">USD - United States Dollar</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('CAD')">CAD - Canadian Dollar</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('CHF')">CHF - Swiss Franc</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('CNY')">CNY - Chinese Yuan</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('DKK')">DKK - Danish Krone</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('EUR')">EUR - Euro</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('GBP')">GBP - British Pound Sterling</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('HKD')">HKD - Hong Kong Dollar</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('HRK')">HRK - Croatian Kuna</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('ILS')">ILS - Israeli New Sheqel</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('INR')">INR - Indian Rupee</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('ISK')">ISK - Icelandic Króna</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('JPY')">JPY - Japanese Yen</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('NOK')">NOK - Norwegian Krone</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('NZD')">NZD - New Zealand Dollar</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('PHP')">PHP - Philippine Peso</a></li>
+                        <li><a class="dropdown-item" onclick="getBaseCur('ZAR')">ZAR - South African Rand</a></li>
+                    </ul>
+                  </div>
+                <h4 class="target-currency">target Currency</h4>
+                <div class="dropdown target-currency1">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Base Currency
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" onclick="getTargetCur('USD')">USD - United States Dollar</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('CAD')">CAD - Canadian Dollar</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('CHF')">CHF - Swiss Franc</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('CNY')">CNY - Chinese Yuan</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('DKK')">DKK - Danish Krone</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('EUR')">EUR - Euro</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('GBP')">GBP - British Pound Sterling</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('HKD')">HKD - Hong Kong Dollar</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('HRK')">HRK - Croatian Kuna</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('ILS')">ILS - Israeli New Sheqel</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('INR')">INR - Indian Rupee</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('ISK')">ISK - Icelandic Króna</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('JPY')">JPY - Japanese Yen</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('NOK')">NOK - Norwegian Krone</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('NZD')">NZD - New Zealand Dollar</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('PHP')">PHP - Philippine Peso</a></li>
+                        <li><a class="dropdown-item" onclick="getTargetCur('ZAR')">ZAR - South African Rand</a></li>
+                    </ul>
+                  </div>
+                <button class="btn-gcr">GET Conversion Rate</button>
+                <h1 class="result"></h1>
+            </div>
+        </div>
+    </div>
 
-    <button class="btn-gcr">GET Conversion Rate</button>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
 </html>
