--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     
     
-    <div class="container-fluid text-center">
+      <div class="container-fluid text-center">
         <div class="row justify-content-center">
             <!-- Multiple Conversions -->
             <div class="col-4 align-self-center">
@@ -169,10 +169,39 @@
                   </div>
 
                 <button class="btn-gca m-2">GET Conversion Amount</button>
-                <h3 class="result-amount">result goes here</h3>
+                <h3 class="result-amount"></h3>
             </div>
         </div>
-    </div>
+        <!-- Time and timezone lookup -->
+        <div class="row justify-content-center">
+          <div class="col-4 align-self-center">
+            <h3>Get Time and Zone</h3>
+            <div class="mb-3">
+              <label for="CityToView" class="form-label">City</label>
+              <input type="text" class="form-control" id="CityToView" placeholder="Enter City">
+            </div>
+            <button class="btn-gt m-2">GET Time</button>
+            <h3 class="result-time">Result Should go here</h3>
+          </div>
+          <!-- Time Conversion -->
+          <div class="col-4 align-self-center">
+            <h3>Get Time Conversion</h3>
+            <div class="mb-3">
+              <label for="BaseCity" class="form-label">Base Location</label>
+              <input type="text" class="form-control" id="BaseCityLocation" placeholder="Enter City">
+            </div>
+            <div class="mb-3">
+              <label for="BaseCity" class="form-label">Current or desired time</label>
+              <input type="text" class="form-control" id="BaseCityTime" placeholder="Enter Time ex. 07:00:00">
+            </div>
+            <div class="mb-3">
+              <label for="TargetCity" class="form-label">Target Location</label>
+              <input type="text" class="form-control" id="TargetCityLocation" placeholder="Enter City">
+            </div>
+            <button class="btn-gtc m-2">GET Time Conversion</button>
+          </div>
+        </div>
+      </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
