--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
               <input type="text" class="form-control" id="CityToView" placeholder="Enter City">
             </div>
             <button class="btn-gt m-1">GET Time</button>
-            <h4 class="result-time">Result Should go here</h4>
+            <h4 class="result-time"></h4>
           </div>
           <!-- Time Conversion -->
           <div class="col-5 align-self-center">
@@ -197,7 +197,7 @@
               <input type="text" class="form-control" id="TargetCityLocation" placeholder="Enter City">
             </div>
             <button class="btn-gtc m-1">GET Time Conversion</button>
-            <h4 class="result-timeConversion">Result Should go here</h4>
+            <h4 class="result-timeConversion"></h4>
           </div>
         </div>
       </div>
